--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 </head>
 <body>
 
+    <form>
+        <div>
+            <label for="km">km</label>
+            <input type="number" id="km">
+        </div>
+        <div>
+            <label for="età">età</label>
+            <input type="number" id="age">
+
+        </div>
+
+        <button type="button" id="acquista">Acquista</button>
+        <button type="reset">Svuota</button>
+    </form>
+
 
 <!-- Javascript -->
 <script type="text/javascript" src="js/script.js"></script>
