Finito ma non ho idea di come ho fatto

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                                 </div>
                                 <div class="mb-3 col-3">
                                     <select class="form-select h-100" aria-label="Default select example" id="age">
-                                        <option selected>Fascia d'età</option>
-                                        <option value="1">Maggiorenne</option>
-                                        <option value="2">Minorenne</option>
-                                        <option value="3">Ultra Sessant'enne</option>
+                                        <option selected disabled>Fascia d'età</option>
+                                        <option value="10">Maggiorenne</option>
+                                        <option value="20">Minorenne</option>
+                                        <option value="30">Ultra Sessant'enne</option>
                                     </select>
                                 </div>
                             </div>
@@ -95,28 +95,28 @@
                             <div class="card col">
                                 <div class="card-body">
                                     <h5 class="card-title">Offerta</h5>
-                                    <p class="card-text">--</p>
+                                    <p class="card-text" id="type-travel">--</p>
                                 </div>
                             </div>
 
                             <div class="card col">
                                 <div class="card-body">
-                                    <h5 class="card-title">Carrozza</h5>
-                                    <p class="card-text">--</p>
+                                    <h5 class="card-title" >Carrozza</h5>
+                                    <p class="card-text" id="carrozza">--</p>
                                 </div>
                             </div>
 
                             <div class="card col">
                                 <div class="card-body">
                                     <h5 class="card-title">Codice CP</h5>
-                                    <p class="card-text">--</p>
+                                    <p class="card-text" id="cp-code">--</p>
                                 </div>
                             </div>
 
                             <div class="card col">
                                 <div class="card-body">
                                     <h5 class="card-title">Costo Biglietto</h5>
-                                    <p class="card-text">--</p>
+                                    <p class="card-text" id="ticket-price">--</p>
                                 </div>
                             </div>
                         </div>
