--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Template</title>
+    <title>Biglietto Treno Form</title>
 </head>
 <body>
 
