--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button type="reset">Svuota</button>
     </form> -->
 
-    <main class="text-center bg-info vh-100">
+    <main class="text-center vh-100">
         <form>
             <div class="container-fluid pt-5 px-5">
                 <div class="card">
@@ -67,7 +67,7 @@
                         <div class="container my-4">
                             <div class="row justify-content-evenly">
                                 <button type="button" class="btn btn-primary col-2 btn-lg" id="genera">Genera</button>
-                                <button type="reset" class="btn btn-warning col-2 btn-lg">Annulla</button>
+                                <button type="reset" id="cancella" class="btn btn-warning col-2 btn-lg">Annulla</button>
                             </div>
                         </div>
                     </div>
